Increase test coverage (#146)
Signed-off-by: yuye-aws <yuyezhu@amazon.com>